[package]
name = "pond"
version = "0.1.0"
edition = "2021"
description = "A simple tool to deploy projects to a self hosted server"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
figment = { version = "0.10.19", features = ["toml", "env"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
reqwest = { version = "0.12.7", features = ["multipart", "blocking"] }
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"
zip = { version = "2.2.0", default-features = false }
